--- a/common-grpc/pom.xml
+++ b/common-grpc/pom.xml
@@ -51,7 +51,7 @@
 
     </dependencies>
 
-    <!-- PROTO-BUF GENERATION -->
+    <!-- GRPC GENERATION -->
     <repositories>
         <repository>
             <!-- required for grpc-spring-boot-starter -->
@@ -66,7 +66,7 @@
     </repositories>
     <build>
         <extensions>
-            <!-- PROTO-BUF GENERATION: provides os.detected.classifier (i.e. linux-x86_64, osx-x86_64) property -->
+            <!-- GRPC GENERATION: provides os.detected.classifier (i.e. linux-x86_64, osx-x86_64) property -->
             <extension>
                 <groupId>kr.motd.maven</groupId>
                 <artifactId>os-maven-plugin</artifactId>
@@ -74,7 +74,7 @@
             </extension>
         </extensions>
         <plugins>
-            <!-- PROTO-BUF GENERATION: The plugin for generating Java files from ProtoBuf files -->
+            <!-- GRPC GENERATION: The plugin for generating Java files from ProtoBuf files -->
             <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
                 <artifactId>protobuf-maven-plugin</artifactId>
