Create grpc client

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>grpc-resource</module>
         <module>pro01-simple-grpc</module>
         <module>pro02-error-handler</module>
+        <module>grpc-client</module>
     </modules>
 
     <parent>
