--- a/pro02-error-handler/pom.xml
+++ b/pro02-error-handler/pom.xml
@@ -38,6 +38,18 @@
             <artifactId>grpc-spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- AOP -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <!--<version>1.8.12</version>-->
+            <!--<scope>compile</scope>-->
+        </dependency>
+
     </dependencies>
 
 
