--- a/pro02-error-handler/pom.xml
+++ b/pro02-error-handler/pom.xml
@@ -32,6 +32,7 @@
             <artifactId>grpc-resource</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
         <!-- GRPC SERVICE: SPRING BOOT GRPC -->
         <dependency>
             <groupId>org.lognet</groupId>
@@ -49,6 +50,19 @@
             <!--<version>1.8.12</version>-->
             <!--<scope>compile</scope>-->
         </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-testing</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-protobuf</artifactId>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.grpc</groupId>-->
+            <!--<artifactId>grpc-stub</artifactId>-->
+        <!--</dependency>-->
 
     </dependencies>
 
