--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>8</java.version>
         <spring-cloud.version>Finchley.RC1</spring-cloud.version>
-        <grpc.version>1.11.0</grpc.version>
+        <grpc.version>1.15.0</grpc.version><!-- https://github.com/grpc/grpc-java/issues/2601 :v1.11.0 looks like has problem sending grpc header -->
+
     </properties>
 
     <dependencies>
