--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <modules>
         <module>common-grpc</module>
-        <module>grpc-resource</module>
+        <module>sample-service-proto</module>
         <module>grpc-client</module>
         <module>pro01-simple-grpc</module>
         <module>pro02-error-handler</module>
