--- a/sample-grpc-server-02-error-and-header/pom.xml
+++ b/sample-grpc-server-02-error-and-header/pom.xml
@@ -62,7 +62,7 @@
             <artifactId>grpc-protobuf</artifactId>
         </dependency>
 
-        <!-- Logback with JSON -->
+        <!-- Logback with JSON format-->
         <!--<dependency>-->
             <!--<groupId>ch.qos.logback</groupId>-->
             <!--<artifactId>logback-classic</artifactId>-->
@@ -84,7 +84,8 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.3</version>
+            <!--<version>2.9.3</version>-->
+            <!--<scope>provided</scope>-->
         </dependency>
     </dependencies>
 
