Copied code from example grpc-tls

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>sample-grpc-client</module>
         <module>sample-grpc-server-01-simple</module>
         <module>sample-grpc-server-02-error-and-header</module>
+        <module>sample-grpc-tls</module>
     </modules>
 
     <parent>
