--- a/grpc-client-app/pom.xml
+++ b/grpc-client-app/pom.xml
@@ -83,31 +83,22 @@
 
         <!-- Hotel Management -->
         <dependency>
-            <groupId>com.leonardo.mona-lisa.hotel-management.hotel-view</groupId>
-            <artifactId>hotel-view-proto</artifactId>
-            <version>1.9.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.leonardo.mona-lisa.hotel-management.hotel-view</groupId>
-            <artifactId>hotel-view-service-proto</artifactId>
-            <version>1.6.1</version>
+            <groupId>com.leonardo.mona-lisa.mobias-mona-lisa-syndicator-api-gateway</groupId>
+            <artifactId>hotel-view-api-proto</artifactId>
+            <version>0.3.0</version>
         </dependency>
 
         <!-- Content Management -->
         <dependency>
-            <groupId>com.leonardo.mona-lisa.content-management.content</groupId>
-            <artifactId>content-service-proto</artifactId>
-            <version>1.15.0</version>
+            <groupId>com.leonardo.mona-lisa.mobias-mona-lisa-syndicator-api-gateway</groupId>
+            <artifactId>content-api-proto</artifactId>
+            <version>0.9.0</version>
         </dependency>
+
         <dependency>
-            <groupId>com.leonardo.mona-lisa.content-management.content</groupId>
-            <artifactId>content-vscape-syndication-service-proto</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.leonardo.mona-lisa.content-management.collection</groupId>
-            <artifactId>collection-service-proto</artifactId>
-            <version>0.6.0</version>
+            <groupId>com.leonardo.mona-lisa.mobias-mona-lisa-syndicator-api-gateway</groupId>
+            <artifactId>collection-api-proto</artifactId>
+            <version>0.8.0</version>
         </dependency>
     </dependencies>
 
