--- a/grpc-client-app/src/main/resources/application.yml
+++ b/grpc-client-app/src/main/resources/application.yml
@@ -3,7 +3,9 @@ grpc-connections:
 #    host: a19a00e89a33911e9862f060c0fb2306-1628580929.us-east-2.elb.amazonaws.com
     host: af8b6ed2ca32e11e9ba1602e3561cac5-1261149132.us-east-2.elb.amazonaws.com
     port: 6565
+    tls-certificate-file-path: "/opt/apps/resource/mobias-mona-lisa-syndicator/mobias_monalisa_api_gateway_cacert.pem"
   hotel-management:
 #    host: a6b4e0af2a73411e9ba1602e3561cac5-677096859.us-east-2.elb.amazonaws.com
     host: af8b6ed2ca32e11e9ba1602e3561cac5-1261149132.us-east-2.elb.amazonaws.com
     port: 6565
+    tls-certificate-file-path: "/opt/apps/resource/mobias-mona-lisa-syndicator/mobias_monalisa_api_gateway_cacert.pem"
