--- a/sample-grpc-server-01-simple/pom.xml
+++ b/sample-grpc-server-01-simple/pom.xml
@@ -16,6 +16,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-testing</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
             <artifactId>common-grpc</artifactId>
             <version>${project.version}</version>
