Use grpc-client-app to connect TLS Server. The TLS Client has some issue which cannot connect via TLS gRPC

--- a/grpc-client-app/pom.xml
+++ b/grpc-client-app/pom.xml
@@ -89,6 +89,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
+            <artifactId>sample-proto</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <!-- Hotel Management -->
         <dependency>
             <groupId>com.leonardo.mona-lisa.mobias-mona-lisa-syndicator-api-gateway</groupId>
