--- a/sample-grpc-tls-client/src/main/resources/application.yml
+++ b/sample-grpc-tls-client/src/main/resources/application.yml
@@ -1,8 +1,7 @@
-
-itemgrpc:
-  connection:
+grpc-connections:
+  sample-item:
     host: localhost
     port: 6565
-    ca-cert-file-path: /home/kevintran/SourceCode/Personal/Practice/practice-spring-grpc/sample-grpc-tls-client/certificates/ca/cacert.pem
+    tls-certificate-file-path: "/home/kevintran/SourceCode/Personal/Practice/practice-spring-grpc/sample-grpc-tls-client/certificates/ca/cacert.pem"
 server:
   port: 8081
