Fix mistake in pom.xml file.

--- a/sample-grpc-tls-client/pom.xml
+++ b/sample-grpc-tls-client/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-tcnative-boringssl-static</artifactId>
-            <!-- We are using grpc-netty 1.15.1, it's only compatible with netty-tcnative-boringssl-static 2.0.22.Final https://github.com/grpc/grpc-java/blob/v1.15.1/SECURITY.md#troubleshooting)
+            <!-- We are using grpc-netty 1.15.1, it's only compatible with netty-tcnative-boringssl-static 2.0.22.Final https://github.com/grpc/grpc-java/blob/v1.15.1/SECURITY.md#troubleshooting) -->
             <version>2.0.22.Final</version>
         </dependency>
     </dependencies>
