Updating pom.xml

--- a/sample-proto/pom.xml
+++ b/sample-proto/pom.xml
@@ -2,15 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>practice-spring-grpc</artifactId>
-        <groupId>org.tnmk.skeleton</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
+<!--    <parent>-->
+<!--        <artifactId>practice-spring-grpc</artifactId>-->
+<!--        <groupId>org.tnmk.skeleton</groupId>-->
+<!--        <version>0.0.1-SNAPSHOT</version>-->
+<!--    </parent>-->
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
     <artifactId>sample-proto</artifactId>
+
+    <properties>
+        <io.grpc-version>1.22.1</io.grpc-version>
+    </properties>
 
     <dependencies>
 
@@ -18,11 +22,13 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
+            <version>${io.grpc-version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
+            <version>${io.grpc-version}</version>
         </dependency>
     </dependencies>
 
