--- a/sample-grpc-tls-server/pom.xml
+++ b/sample-grpc-tls-server/pom.xml
@@ -6,36 +6,41 @@
     <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
     <artifactId>sample-grpc-tls-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
-    <parent>
-        <groupId>org.tnmk.skeleton</groupId>
-        <artifactId>practice-spring-grpc</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
+    <properties>
+        <io.grpc-version>1.22.1</io.grpc-version>
+    </properties>
 
     <dependencies>
+        <!-- SPRING -->
         <dependency>
-            <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
-            <artifactId>common-grpc</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <scope>provided</scope>
         </dependency>
-        <!--Test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
+        <!-- SPRING-GRPC SERIALIZATION -->
+        <dependency>
+            <groupId>org.lognet</groupId>
+            <artifactId>grpc-spring-boot-starter</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+
+        <!-- PROTO MESSAGE -->
         <dependency>
             <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
             <artifactId>sample-proto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <!-- GRPC SERVICE: SPRING BOOT GRPC -->
-        <dependency>
-            <groupId>org.lognet</groupId>
-            <artifactId>grpc-spring-boot-starter</artifactId>
         </dependency>
 
         <!-- Grpc TLS -->
@@ -49,10 +54,23 @@
                 https://github.com/grpc/grpc-java/blob/v1.15.1/SECURITY.md#troubleshooting
                 For grpc-netty 1.10.0, it's compatible with netty-tcnative-boringssl-static 2.0.7.Final to 2.0.22.Final
              -->
-            <version>2.0.22.Final</version>
+            <version>2.0.25.Final</version>
         </dependency>
     </dependencies>
 
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- SPRING FRAMEWORK DEPENDENCIES MANAGEMENT-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.1.6.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <repositories>
         <!-- GRPC GENERATION -->
@@ -80,5 +98,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
