--- a/sample-grpc-tls-client/pom.xml
+++ b/sample-grpc-tls-client/pom.xml
@@ -13,6 +13,24 @@
     <artifactId>sample-grpc-tls-client</artifactId>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
+        <spring-boot-version>2.1.6.RELEASE</spring-boot-version>
+        <io.grpc-version>1.22.1</io.grpc-version>
+
+        <!--
+        In my grpc-client-app, I'm using 2.0.25.Final, and it works fine.
+        If I change the server to 2.0.25.Final, it will get error: Caused by: java.nio.channels.ClosedChannelException (!!!)
+        The root cause is incompatible version between grpc and tcnative-boringssl:
+        https://github.com/grpc/grpc-java/blob/v1.15.1/SECURITY.md#troubleshooting
+        For grpc-netty 1.10.0, it's compatible with netty-tcnative-boringssl-static 2.0.7.Final to 2.0.22.Final
+        -->
+        <io.netty-version>2.0.25.Final</io.netty-version>
+
         <org.mapstruct.version>1.2.0.Final</org.mapstruct.version>
     </properties>
 
@@ -26,6 +44,20 @@
             <groupId>org.tnmk.skeleton.practice-spring-grpc</groupId>
             <artifactId>sample-proto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <!-- GRPC GENERATION: GENERATED STUB -->
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-stub</artifactId>
+            <version>${io.grpc-version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-protobuf</artifactId>
+            <version>${io.grpc-version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- GRPC CLIENT CONNECTION-->
