--- a/grpc-client-app/pom.xml
+++ b/grpc-client-app/pom.xml
@@ -17,8 +17,12 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <spring-boot-version>2.1.6.RELEASE</spring-boot-version>
+
+        <!-- The compatible between grpc-version & netty-version: https://github.com/grpc/grpc-java/blob/master/SECURITY.md -->
+        <!-- We cannot use netty-version 2.0.12.Final because it doesn't compatible with netty-tcnative-boringssl-static -->
         <io.grpc-version>1.22.1</io.grpc-version>
         <io.netty-version>2.0.25.Final</io.netty-version>
+
     </properties>
 
     <dependencies>
@@ -37,7 +41,7 @@
         <!-- gRPC client -->
         <dependency>
             <groupId>io.grpc</groupId>
-            <artifactId>grpc-netty</artifactId>
+            <artifactId>grpc-netty-shaded</artifactId>
             <version>${io.grpc-version}</version>
         </dependency>
 
